# gemp_codes

aula/: ex1  ex1.cpp  test.cpp  teste
ex8/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ex8/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ex8/source/: lib.cpp  main.cpp
ex8/test/: CMakeLists.txt
ex8/test/source/: ex8_test.cpp
lista_1/: ex1.cpp  ex2.cpp  ex3  ex3.cpp  ex5.cpp  ex6.cpp  ex7  ex7.cpp
